Refactor and add test